@@ -5,6 +5,7 @@ Revision history for Perl extension Perl-MinimumVersion
         - Error in minimum_syntax_reason discovered by perl 5.12 (Alexandr Ciornii)
 	- Detect "package NAME VERSION" in 5.12. (Steffen Mueller)
 	- Detect "..." (yada yada yada) in 5.12. (Steffen Mueller)
+	- Detect "use feature ':5.12';" in 5.12. (Steffen Mueller)
 
 1.24 Fri 22 Jan 2010
 	- The previous changes seem to work well in practice now,
